--- a/extras/plotting/jetobs_comparison.ipynb
+++ b/extras/plotting/jetobs_comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook to compare two jet constituent observables from a root file\n",
+    "# Compare two root files describing the jet constituent observables used for tagging\n",
     "\n",
     "You can retrieve the jet constituent observables to a root file using the steering file `writeJetConstObs.py`. You can find out how to submit large jobs on condor in the `/extras/submit_to_condor` folder. \n",
     " "
@@ -50,6 +50,7 @@
     "file_2 = uproot.open(path_2)\n",
     "tree_2 = file_2[\"tree;1\"]\n",
     "\n",
+    "# adapt the size of the data you want to load here\n",
     "df_1 = tree_1.arrays(library=\"np\", entry_start=0, entry_stop=3000) \n",
     "df_2 = tree_2.arrays(library=\"np\", entry_start=0, entry_stop=3000)"
    ]
